// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should display comp with no image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Coffee mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductTitle should match snapshot with img 1`] = `
<img
  alt="Coffee mug"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
